--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/First2Fragment"
-        android:name="com.deliver.any.value.First2Fragment"
+        android:name="com.deliver.any.value.fragment.SendOTPFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_get_otp">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/Second2Fragment"
-        android:name="com.deliver.any.value.Second2Fragment"
+        android:name="com.deliver.any.value.fragment.EnterOTPFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_enter_otp">
 
