--- a/app/src/main/res/layout/activity_area_map.xml
+++ b/app/src/main/res/layout/activity_area_map.xml
@@ -12,7 +12,7 @@
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="349dp"
+        android:layout_height="match_parent"
         tools:context=".MapsActivity"
         tools:layout="?android:attr/preferenceLayoutChild" />
 
